--- a/TP2/assets/css/style.css
+++ b/TP2/assets/css/style.css
@@ -18,8 +18,13 @@ header {
   border-bottom: 1px solid #0b2d3d;
 }
 
+header * {
+  max-width: 1200px;
+}
+
 header, main {
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 header > a {
@@ -64,7 +69,7 @@ main {
 
 }
 
-div.contact{
+div.order-contact{
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -79,14 +84,40 @@ div.contact{
     grid-row: 2;
 
 }
-div.Paiement{
+
+.third {
+  grid-column: 2;
+  grid-row: 3;
+}
+
+div.paiement{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
 }
+
 main.products-main {
     display: grid;
     grid-template-columns: 1fr 3fr;
 
+}
+
+.order input, .order label {
+  display: block;
+  width: 90%;
+
+}
+
+.order .btn {
+  width: 20%;
+  height: 50%;
+  margin-left: 71%;
+}
+
+.order label {
+  margin-top: 3%;
+  margin-bottom: 1%;
+  font-weight: bold;
 }
 
 
@@ -120,8 +151,15 @@ main.products-main > aside > section > button:hover {
 
 main.products-main > aside > section > button.selected {
 
-    background-color: #f3f3f3;
+    background-color: #ddf2fb;
 
+}
+
+#product-categories button, #product-criteria button {
+    border: 1px solid #999999;
+    padding: 10px 24px;
+    cursor: pointer;
+    float: left;
 }
 
 main.products-main > aside > section {
@@ -144,14 +182,16 @@ main.products-main > div > section > a {
     margin-bottom: 2%;
     text-decoration: none;
     color: black;
+    max-height: 10%;
+    border: 1px solid #999999;
+    border-radius: 4px;
+
 }
-main.products-main > div > section section:hover {
+main.products-main > div > section a:hover {
     background-color: #f3f3f3;
 }
 main.products-main > div > section section {
     width: 100%;
-    border: 1px solid #999999;
-    border-radius: 4px;
     -webkit-transition-duration: 0.2s;
     -moz-transition-duration: 0.2s;
     -ms-transition-duration: 0.2s;
@@ -197,7 +237,14 @@ footer {
   top: 10px;
   right: 12px;
   z-index: 1;
+  text-align: center;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  border-radius: 50%;
   position: relative;
+  text-align: center;
 }
 
 .landing-image {
@@ -221,11 +268,11 @@ footer {
 
 .product-main {
   display: grid;
-  grid-template-columns: repeat(1fr, 2);
+  grid-template-columns: 1fr 1fr;
 }
 
 .product-main > img {
-  grid-column: 1;
+  grid-column: 1 ;
 }
 
 .product-main .right-column {
@@ -236,8 +283,18 @@ footer {
   padding-left: 40%;
 }
 
+span.right-column .bold {
+  font-weight: bold;
+}
+
+hr {
+    border: 1px dashed black;
+    width: 100%;
+}
+
 .form-control {
   border: 1px solid #999999;
+  line-height: 20px;
   border-radius: 4px;
 }
 
@@ -275,11 +332,12 @@ main .contact-columns {
 
 .contact section section {
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 0.75fr;
 }
 
 .contact section section i {
   margin: auto;
+  margin-top: 25%;
   grid-row: 1;
   margin-bottom: 1%;
 }
@@ -293,6 +351,10 @@ main .contact-columns {
 table {
   border-collapse: collapse;
   width: 100%;
+}
+
+td {
+  text-align: center;
 }
 
 td a {
@@ -325,5 +387,7 @@ td button:hover {
 }
 
 .last-line a {
-  margin-left: 81.5%;
+  display: inline-block;
+   text-align: right;
+   width: 100%;
 }
