--- a/TP3/assets/css/style.css
+++ b/TP3/assets/css/style.css
@@ -371,3 +371,18 @@ footer {
   background-color: #eee;
   border-top: 1px solid #ccc;
 }
+
+#dialog{
+  background-color: #000;
+  color: #fff;
+  z-index: 1;
+  margin: auto;
+  position: absolute;
+  left: 33%;
+  bottom: 20%;
+  line-height: 250%;
+  width: 30%;
+  text-align: center;
+  border-radius: 3px;
+  padding: auto;
+}
