:recycle: checkout that shorter code Louis

--- a/TP3/assets/css/style.css
+++ b/TP3/assets/css/style.css
@@ -221,7 +221,7 @@ header nav .shopping-cart .count {
   border-radius: 16px;
 }
 header nav .shopping-cart .count.visible {
-  display: inline;
+  display: block;
 }
 main {
   display: flex;
