--- a/TP4/views/index.pug
+++ b/TP4/views/index.pug
@@ -1,5 +1,40 @@
 extends layout
 
-block content
+head
+  meta(charset='UTF-8')
+  title OnlineShop - Accueil
+  link(rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+  link(rel='stylesheet' type='text/css' href='./assets/css/style.css')
+header
+  .header-container
+    .logo
+      a(href='./index.html')
+        img(alt='logo' src='./assets/img/logo.svg' title='Accueil')
+    nav
+      ul
+        li.active
+          a(href='./index.html') Accueil
+        li
+          a(href='./products.html') Produits
+        li
+          a(href='./contact.html') Contact
+        li
+          a.shopping-cart(href='./shopping-cart.html' title='Panier')
+            span.fa-stack.fa-lg
+              i.fa.fa-circle.fa-stack-2x.fa-inverse
+              i.fa.fa-shopping-cart.fa-stack-1x
+            span.count 3
+main
   article
-    h1= message
+    img#home-img(alt='home' src='./assets/img/home.png')
+    h1 Le site n&deg;1 pour les achats en ligne!
+    p D&eacute;couvrez nos diff&eacute;rents produits au meilleur prix.
+    a.btn(href='./products.html')
+      | En savoir plus 
+      i.fa.fa-angle-double-right
+footer
+  p Par Antoine B&eacute;land et Konstantinos Lambrou-Latreille
+script(type='text/javascript' src='./assets/js/jquery-3.2.1.min.js')
+script(type='text/javascript' src='./assets/scripts/utils.js')
+script(type='text/javascript' src='./assets/scripts/shopping-cart.service.js')
+script(type='text/javascript' src='./assets/scripts/shopping-cart.controller.js')
