--- a/TP4/views/layout.pug
+++ b/TP4/views/layout.pug
@@ -27,6 +27,7 @@ html(lang='fr')
                   i.fa.fa-circle.fa-stack-2x.fa-inverse
                   i.fa.fa-shopping-cart.fa-stack-1x
                 span.count 3
-    main
-    footer
-      p Paul-Arthur Thiéry 1969108 | Louis-efflam Le Vély 1969154
+    block main
+  footer
+    p Paul-Arthur Thiéry 1969108 | Louis-efflam Le Vély 1969154
+block scripts
