--- a/TP4/views/layout.pug
+++ b/TP4/views/layout.pug
@@ -3,8 +3,8 @@ html(lang='fr')
   head
     meta(charset='UTF-8')
     title OnlineShop - Accueil
-    script(type='text/javascript', src='./assets/js/jquery-3.2.1.min.js')
-    script(type='text/javascript', src='assets/scripts/controllers/global.js', defer='')
+    script(type='text/javascript' src='./assets/js/jquery-3.2.1.min.js')
+    script(type='text/javascript' src='./assets/scripts/utils.js')
     link(rel='stylesheet', type='text/css', href='https://use.fontawesome.com/releases/v5.3.1/css/all.css')
     link(rel='stylesheet', type='text/css', href='./assets/css/style.css')
   body
