:sparkles: update layout's links

--- a/TP4/views/layout.pug
+++ b/TP4/views/layout.pug
@@ -11,16 +11,16 @@ html(lang='fr')
     header
       .header-container
         .logo
-          a(href='./index.html')
+          a(href='./')
             img(alt='logo', src='./assets/img/logo.svg', title='Accueil')
         nav
           ul
             li.active
-              a(href='./index.html') Accueil
+              a(href='./') Accueil
             li
-              a(href='./products.html') Produits
+              a(href='./produits') Produits
             li
-              a(href='./contact.html') Contact
+              a(href='./contact') Contact
             li
               a.shopping-cart(href='./shopping-cart.html', title='Panier')
                 span.fa-stack.fa-lg
