oops forgot panier

--- a/TP4/views/layout.pug
+++ b/TP4/views/layout.pug
@@ -22,7 +22,7 @@ html(lang='fr')
             li
               a(href='./contact') Contact
             li
-              a.shopping-cart(href='./shopping-cart.html', title='Panier')
+              a.shopping-cart(href='./panier', title='Panier')
                 span.fa-stack.fa-lg
                   i.fa.fa-circle.fa-stack-2x.fa-inverse
                   i.fa.fa-shopping-cart.fa-stack-1x
