--- a/TP4/views/products.pug
+++ b/TP4/views/products.pug
@@ -23,7 +23,4 @@ block main
     #products-list.products
       .loading
 block scripts
-  script(type='text/javascript' src='./assets/scripts/products.service.js')
-  script(type='text/javascript' src='./assets/scripts/shopping-cart.service.js')
-  script(type='text/javascript' src='./assets/scripts/shopping-cart.controller.js')
-  script(type='text/javascript' src='./assets/scripts/products.controller.js')
+  script(type='text/javascript' src='/assets/scripts/products.controller.js')
