--- a/TP4/views/layout.pug
+++ b/TP4/views/layout.pug
@@ -3,8 +3,11 @@ html(lang='fr')
   head
     meta(charset='UTF-8')
     title OnlineShop - Accueil
-    script(type='text/javascript' src='./assets/js/jquery-3.2.1.min.js')
-    script(type='text/javascript' src='./assets/scripts/utils.js')
+    script(type='text/javascript' src='/assets/js/jquery-3.2.1.min.js')
+    script(type='text/javascript' src='/assets/scripts/utils.js')
+    script(type='text/javascript' src='/assets/scripts/products.service.js')
+    script(type='text/javascript' src='/assets/scripts/shopping-cart.service.js')
+    script(type='text/javascript' src='/assets/scripts/shopping-cart.controller.js')
     link(rel='stylesheet', type='text/css', href='https://use.fontawesome.com/releases/v5.3.1/css/all.css')
     link(rel='stylesheet', type='text/css', href='./assets/css/style.css')
   body
@@ -26,7 +29,7 @@ html(lang='fr')
                 span.fa-stack.fa-lg
                   i.fa.fa-circle.fa-stack-2x.fa-inverse
                   i.fa.fa-shopping-cart.fa-stack-1x
-                span.count 3
+                span.count!= localStorage.getItem("panier").length
     block main
   footer
     p Paul-Arthur Thiéry 1969108 | Louis-efflam Le Vély 1969154
