:sparkles: endpoint for products done

--- a/TP4/views/layout.pug
+++ b/TP4/views/layout.pug
@@ -29,7 +29,7 @@ html(lang='fr')
                 span.fa-stack.fa-lg
                   i.fa.fa-circle.fa-stack-2x.fa-inverse
                   i.fa.fa-shopping-cart.fa-stack-1x
-                span.count!= localStorage.getItem("panier").length
+                span.count 3
     block main
   footer
     p Paul-Arthur Thiéry 1969108 | Louis-efflam Le Vély 1969154
