:sparkles: order enpoint working

--- a/TP4/views/layout.pug
+++ b/TP4/views/layout.pug
@@ -30,7 +30,8 @@ html(lang='fr')
                   i.fa.fa-circle.fa-stack-2x.fa-inverse
                   i.fa.fa-shopping-cart.fa-stack-1x
                 span.count 3
-    block main
+    main
+      block main
   footer
     p Paul-Arthur Thiéry 1969108 | Louis-efflam Le Vély 1969154
 block scripts
