--- a/TP4/views/order.pug
+++ b/TP4/views/order.pug
@@ -38,7 +38,7 @@ block main
       button.btn.pull-right(type='submit')
         | Payer 
         i.fa.fa-angle-double-right
-block sripts
+block scripts
   script(type='text/javascript' src='./assets/js/jquery.validate.min.js')
   script(type='text/javascript' src='./assets/js/additional-methods.min.js')
   script(type='text/javascript' src='./assets/js/messages_fr.js')
