:sparkles: cart page done

--- a/TP4/views/layout.pug
+++ b/TP4/views/layout.pug
@@ -29,7 +29,7 @@ html(lang='fr')
                 span.fa-stack.fa-lg
                   i.fa.fa-circle.fa-stack-2x.fa-inverse
                   i.fa.fa-shopping-cart.fa-stack-1x
-                span(class="count" class={visible: itemsCount > 0} id="shopping-cart-quantity")= itemsCount
+                span(class="count" class={visible: itemsCount > 0})= itemsCount
     main
       block main
   footer
