--- a/TP4/views/layout.pug
+++ b/TP4/views/layout.pug
@@ -3,9 +3,9 @@ html(lang='fr')
   head
     meta(charset='UTF-8')
     title OnlineShop - Accueil
-    script(defer, type='text/javascript' src='/assets/js/jquery-3.2.1.min.js')
-    script(defer, type='text/javascript' src='/assets/scripts/utils.js')
-    script(defer, type='text/javascript' src='/assets/scripts/products.service.js')
+    script(type='text/javascript' src='/assets/js/jquery-3.2.1.min.js')
+    script(type='text/javascript' src='/assets/scripts/utils.js')
+    script(type='text/javascript' src='/assets/scripts/products.service.js')
     script(defer, type='text/javascript' src='/assets/scripts/shopping-cart.service.js')
     script(defer, type='text/javascript' src='/assets/scripts/shopping-cart.controller.js')
     link(rel='stylesheet', type='text/css', href='https://use.fontawesome.com/releases/v5.3.1/css/all.css')
