--- a/TP5/client/src/app/products/products.component.html
+++ b/TP5/client/src/app/products/products.component.html
@@ -2,25 +2,18 @@
   <section>
     <h2>Catégories</h2>
     <div class="btn-group vertical" id="product-categories">
-      <button (click)="getCategory('cameras')">Appareils photo</button>
-      <button (click)="getCategory('consoles')">Consoles</button>
-      <button (click)="getcategory('screens')">Écrans</button>
-      <button (click)="getCategory('computers')">Ordinateurs</button>
-      <button class="selected" (click)="getCategory('all')">Tous les produits</button>
+      <button *ngFor="let category of categories; let i = index" (click)="getCategory($event)" [value]="category.key" [class.selected]="category.key === selectedCategory">{{category.name}}</button>
     </div>
   </section>
   <section>
     <h2>Classement</h2>
     <div class="btn-group vertical" id="product-criteria">
-      <button class="selected" (click)="getCriteria('price-asc')">Prix (bas-haut)</button>
-      <button (click)="getCriteria('price-dsc')" >Prix (haut-bas)</button>
-      <button (click)="getCriteria('name-asc')">Nom (A-Z)</button>
-      <button (click)="getCriteria('name-dsc')">Nom (Z-A)</button>
+      <button *ngFor="let criteria of criterias; let i = index" (click)="getCriteria($event)" [value]="criteria.key" [class.selected]="criteria.key === selectedCriteria">{{criteria.name}}</button>
     </div>
   </section>
 </section>
 <article>
-  <span class="right-header" id="products-count">{{products.length}} produits</span>
+  <span class="right-header" id="products-count">{{products?.length}} produits</span>
   <h1>Produits</h1>
   <div *ngIf="!loading">
     <div class="products" id="products-list">
